[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4","serde"] }
serde_json = "1"
futures-util = "0.3.30"
bcrypt = "0.15.1"
rand = "0.8.5"
ring = "0.17.8"
dashmap = "6.1.0"
jsonwebtoken = "9.3.0"
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
tokio-stream = "0.1.16"
